--- a/fastcamput-board-project/build.gradle
+++ b/fastcamput-board-project/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
+	testImplementation 'org.springframework.security:spring-security-test'
 	//	queryDSL 설정
 	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
 	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
